add ws bid
