# api/route/ws/interface/ws/request.go
@@ -1,0 +1,5 @@
+package ws
+
+type WSUpgradeRequest struct {
+	AuctionID uint `form:"auction_id" binding:"required"`
+}
