# docs/swagger.yaml
@@ -283,4 +283,29 @@ paths:
       summary: Refresh token
       tags:
       - Auth
+  /ws:
+    get:
+      consumes:
+      - application/json
+      description: 处理ws连接
+      parameters:
+      - description: 拍卖id
+        in: query
+        name: auction_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/kernal.ErrorResult'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/kernal.ErrorResult'
+      summary: 处理ws连接
+      tags:
+      - ws
 swagger: "2.0"
